--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js"
+    "start":"node src/app.js",
+    "dev":"Nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
